--- a/Modules/MobileManager/Views/Billing/ViewBilling.xaml
+++ b/Modules/MobileManager/Views/Billing/ViewBilling.xaml
@@ -67,7 +67,7 @@
                     IsReadOnly="True" TabIndex="1" Style="{StaticResource DataGridStyle}" ColumnHeaderStyle="{StaticResource DataGridColumnHeaderStyle}" 
                     ItemsSource="{Binding ProcessHistoryCollection}">
                     <DataGrid.Columns>
-                        <DataGridTextColumn Header="Process" Binding="{Binding BillingProcess.ProcessDescription}" Width="Auto"/>
+                        <DataGridTextColumn Header="Process" Binding="{Binding BillingProcess.ProcessDescription}" Width="*"/>
                         <DataGridTextColumn Header="Result" Binding="{Binding ProcessResult, Converter={StaticResource UIDataConvertionHelper},  ConverterParameter='ProcessResult'}" Width="50"/>
                         <DataGridTextColumn Header="Start Date" Binding="{Binding ProcessStartDate, StringFormat='{}{0: dd/MM/yyyy}'}" Width="Auto" />
                         <DataGridTextColumn Header="End Date" Binding="{Binding ProcessEndDate, StringFormat='{}{0: dd/MM/yyyy}'}" Width="Auto" />
@@ -98,7 +98,7 @@
                 </i:EventTrigger>
             </i:Interaction.Triggers>
             <xctk:WizardPage x:Name="WizardPage1" ExteriorPanelBackground="White" Title="Billing Wizard" Description="This Wizard will walk you through the month-end billing process." 
-                CanSelectNextPage="{Binding BillingRunStarted, UpdateSourceTrigger=PropertyChanged}">
+                CanSelectNextPage="{Binding CanMoveNext, UpdateSourceTrigger=PropertyChanged}">
                 <Grid>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="*" />
@@ -137,7 +137,7 @@
                 </Grid>
             </xctk:WizardPage>
             <xctk:WizardPage x:Name="WizardPage2" ExteriorPanelBackground="White" Title="Billing Wizard" Description="This Wizard page exposes functionality to import the external billing data for each external data provider." 
-                CanSelectNextPage="{Binding DataImportProcessCompleted, UpdateSourceTrigger=PropertyChanged}" NextPage="{Binding ElementName=WizardPage3}" PreviousPage="{Binding ElementName=WizardPage1}">
+                CanSelectNextPage="{Binding CanMoveNext, UpdateSourceTrigger=PropertyChanged}" NextPage="{Binding ElementName=WizardPage3}" PreviousPage="{Binding ElementName=WizardPage1}">
                 <Grid>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="10" />
@@ -151,7 +151,7 @@
                 </Grid>
             </xctk:WizardPage>
             <xctk:WizardPage x:Name="WizardPage3" ExteriorPanelBackground="White" Title="Billing Wizard" Description="This Wizard page exposes functionality to execute the external data rule validation process and to correct any resulting exceptions." 
-                CanSelectNextPage="{Binding DataValidationProcessCompleted, UpdateSourceTrigger=PropertyChanged}" NextPage="{Binding ElementName=WizardPage4}" PreviousPage="{Binding ElementName=WizardPage2}">
+                CanSelectNextPage="{Binding CanMoveNext, UpdateSourceTrigger=PropertyChanged}" NextPage="{Binding ElementName=WizardPage4}" PreviousPage="{Binding ElementName=WizardPage2}">
                 <Grid>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="10" />
@@ -161,11 +161,11 @@
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*" />
                     </Grid.ColumnDefinitions>
-                    <local:ViewDataValidation Grid.Row="2" Grid.Column="0"/>
+                    <local:ViewExtRuleValidation Grid.Row="2" Grid.Column="0"/>
                 </Grid>
             </xctk:WizardPage>
             <xctk:WizardPage x:Name="WizardPage4" ExteriorPanelBackground="White" Title="Billing Wizard" Description="This Wizard page exposes functionality to execute the data validation process and to correct any resulting exceptions." 
-                CanSelectNextPage="{Binding DataValidationProcessCompleted, UpdateSourceTrigger=PropertyChanged}" NextPage="{Binding ElementName=WizardPage5}" PreviousPage="{Binding ElementName=WizardPage3}">
+                CanSelectNextPage="{Binding CanMoveNext, UpdateSourceTrigger=PropertyChanged}" NextPage="{Binding ElementName=WizardPage5}" PreviousPage="{Binding ElementName=WizardPage3}">
                 <Grid>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="10" />
@@ -179,7 +179,7 @@
                 </Grid>
             </xctk:WizardPage>
             <xctk:WizardPage x:Name="WizardPage5" ExteriorPanelBackground="White" Title="Billing Wizard" Description="This Wizard page exposes functionality to validate and manage the external billing data for each external data provider." 
-                CanSelectNextPage="{Binding DataImportProcessCompleted, UpdateSourceTrigger=PropertyChanged}" NextPage="{Binding ElementName=LastPage}" PreviousPage="{Binding ElementName=WizardPage4}">
+                CanSelectNextPage="{Binding CanMoveNext, UpdateSourceTrigger=PropertyChanged}" NextPage="{Binding ElementName=LastPage}" PreviousPage="{Binding ElementName=WizardPage4}">
                 <Grid>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="10" />
