--- a/Modules/MobileManager/Views/Billing/ViewBilling.xaml
+++ b/Modules/MobileManager/Views/Billing/ViewBilling.xaml
@@ -99,7 +99,7 @@
             </i:Interaction.Triggers>
             <xctk:WizardPage x:Name="WizardPage1" ExteriorPanelBackground="White" Title="Billing Wizard" Description="This Wizard will walk you through the month-end billing process." 
                 CanSelectNextPage="{Binding CanMoveNext, UpdateSourceTrigger=PropertyChanged}">
-                <Grid>
+                <Grid Margin="5">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="*" />
                         <RowDefinition Height="Auto" />
@@ -138,7 +138,7 @@
             </xctk:WizardPage>
             <xctk:WizardPage x:Name="WizardPage2" ExteriorPanelBackground="White" Title="Billing Wizard" Description="This Wizard page exposes functionality to import the external billing data for each external data provider." 
                 CanSelectNextPage="{Binding CanMoveNext, UpdateSourceTrigger=PropertyChanged}" NextPage="{Binding ElementName=WizardPage3}" PreviousPage="{Binding ElementName=WizardPage1}">
-                <Grid>
+                <Grid Margin="5">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="10" />
                         <RowDefinition Height="Auto" />
@@ -152,7 +152,7 @@
             </xctk:WizardPage>
             <xctk:WizardPage x:Name="WizardPage3" ExteriorPanelBackground="White" Title="Billing Wizard" Description="This Wizard page exposes functionality to execute the external data rule validation process and to correct any resulting exceptions." 
                 CanSelectNextPage="{Binding CanMoveNext, UpdateSourceTrigger=PropertyChanged}" NextPage="{Binding ElementName=WizardPage4}" PreviousPage="{Binding ElementName=WizardPage2}">
-                <Grid>
+                <Grid Margin="5">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="10" />
                         <RowDefinition Height="Auto" />
@@ -180,7 +180,7 @@
             </xctk:WizardPage>
             <xctk:WizardPage x:Name="WizardPage5" ExteriorPanelBackground="White" Title="Billing Wizard" Description="This Wizard page exposes functionality to validate and manage the external billing data for each external data provider." 
                 CanSelectNextPage="{Binding CanMoveNext, UpdateSourceTrigger=PropertyChanged}" NextPage="{Binding ElementName=LastPage}" PreviousPage="{Binding ElementName=WizardPage4}">
-                <Grid>
+                <Grid Margin="5">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="10" />
                         <RowDefinition Height="Auto" />
